src/objects/Placement__c.object
<CustomObject>
    <description>Holds information about a housing placement, when the Opportunity stage is set to Moved-In, and a policy holder moves into the temporarry housing.  Besides the detail about the duration of the placement, this object is related to Cases to track any issues related to the placement.</description>
    <fields>
        <fullName>AR_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Instructions__c</fullName>
        <label>Accounting Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Check_In_Date__c</fullName>
        <label>Actual Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Move_In_Date__c</fullName>
        <description>The user can enter a date here for their records.</description>
        <label>Actual Move-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjuster_Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjuster Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to adjuster to test email alert.</description>
        <label>Adjuster Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjuster_Mailing_City__c</fullName>
        <formula>Opportunity__r.Adjuster__r.MailingCity</formula>
        <label>Adjuster Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_Other_State__c</fullName>
        <formula>Opportunity__r.Adjuster__r.OtherState</formula>
        <label>Adjuster Other State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjuster_billing_preference__c</fullName>
        <formula>TEXT( Opportunity__r.Adjuster__r.Billing_Communication_Preferences__c)</formula>
        <label>Adjuster_billing_preference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appliances_Pickup_Date__c</fullName>
        <label>Appliances Pick-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Approved Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Through_Date_MM_DD__c</fullName>
        <formula>TEXT(MONTH(Approved_Through_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Approved_Through_Date__c))</formula>
        <label>Approved Through Date MM/DD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Through_Date__c</fullName>
        <label>Approved Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Specialist_Email__c</fullName>
        <label>Residence Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Billing is complete on all hotel rooms for this placement</description>
        <label>Billing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRS_Add_On__c</fullName>
        <description>Total Furniture Deposit Billed. Set at Move-Out by Mulligan</description>
        <label>CRS Add On</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRS_Name__c</fullName>
        <description>Temporary String field to hold the results of a callout to a REST service on Houston</description>
        <label>CRS_Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_be_Extended__c</fullName>
        <formula>OR(AND(OR(ISPICKVAL(Status__c,&apos;Moved-In&apos;),ISPICKVAL(Status__c,&apos;Moved-Out&apos;)), NOT(ISPICKVAL(Selected_Search__r.Furniture_Option__c,&apos;Furniture Only&apos;)), ISPICKVAL( Selected_Search__r.Landlord__r.Status__c,&apos;Active&apos;)),AND(OR(ISPICKVAL(Status__c,&apos;Moved-In&apos;),ISPICKVAL(Status__c,&apos;Moved-Out&apos;)), ISPICKVAL(Selected_Search__r.Furniture_Option__c,&apos;Furniture Only&apos;)))</formula>
        <label>Can be Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <description>The earliest hotel check-in date for the placement</description>
        <label>Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <description>The most recent hotel room check-out date for the placement</description>
        <label>Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <formula>Opportunity__r.Claim__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongaTemplateID__c</fullName>
        <description>Used to merge the correct document for MO.</description>
        <formula>IF (CRS_Add_On__c &lt;= 0, &quot;a0CQ0000000flRS&quot;,
IF ( Properties_Lookup__r.RecordTypeId =&apos;012700000001W43AAE&apos;, &quot;a0CQ0000000flRJ&quot;,
IF (Properties_Lookup__r.RecordTypeId =&apos;012700000001X0MAAU&apos;, &quot;a0CQ0000000flRJ&quot;,
IF (ISPICKVAL(Properties_Lookup__r.Type_of_Property__c, &quot;Corporate Furnished&quot;), &quot;a0CQ0000000flRS&quot;,
IF (Properties_Lookup__r.RecordTypeId =&apos;012700000001W2lAAE&apos;, &quot;a0CQ0000000flRr&quot;,
IF (Properties_Lookup__r.RecordTypeId =&apos;012700000001X0WAAU&apos;, &quot;a0CQ0000000flRr&quot;,
IF (CRS_Add_On__c  &gt; 0, &quot;a0CQ0000000flRI&quot;, &quot;a0CQ0000000flRI&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaTemplateID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_NTV_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked after an early move out extension if the user checks NTV required in mulligan.</description>
        <label>Create NTV Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Custom field that hold the created date and time. This field can be used for reporting and will show the time along with the date.</description>
        <formula>CreatedDate</formula>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Card_CID__c</fullName>
        <label>Credit Card CID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration__c</fullName>
        <label>Credit Card Expiration</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Direct Bill</fullName>
                </value>
                <value>
                    <fullName>vPay</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Visa PayNet</fullName>
                </value>
                <value>
                    <fullName>Chase Visa</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>PayNet</fullName>
                </value>
                <value>
                    <fullName>PayNet ID Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Care_Specialist_Email__c</fullName>
        <label>Customer Care Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Liberty Mutual contract requires option for monthly call</description>
        <inlineHelpText>Is monthly service call requested?</inlineHelpText>
        <label>Customer Service Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Billing_Completed__c</fullName>
        <label>Date Billing Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Moved_In__c</fullName>
        <label>Date Moved In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Set_To_Cancelled__c</fullName>
        <description>The date that this placement was set to Cancelled status</description>
        <label>Date Set To Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Set_To_Checked_Out__c</fullName>
        <description>The date that this placement was set to Checked-Out status</description>
        <label>Date Set To Checked-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To_Send_NTV__c</fullName>
        <label>Date To Send NTV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_State_Statute__c</fullName>
        <description>Number of days a written notice must be mailed to claim deductions from a refundable security deposit</description>
        <formula>IF(CONTAINS(&quot;AK:AZ:HI:NE:SD:VT&quot;, Selected_Search__r.State__c), 14, 

IF(CONTAINS(&quot;FL&quot;, Selected_Search__r.State__c), 15, 

IF(CONTAINS(&quot;DE:RI&quot;, Selected_Search__r.State__c), 20, 

IF(CONTAINS(&quot;CA:MN:WA:WI&quot;,Selected_Search__r.State__c), 21, 

IF(CONTAINS(&quot;CT:GA:ID:IL:IA:KS:KY:LA:MA:ME:MI:MO:MT:NV:NH:NJ:NM:NY:NC:ND:OH:OK:PA:SC:TX:UT:WV:WY:TN&quot;, Selected_Search__r.State__c), 30, 

IF(CONTAINS(&quot;OR&quot;, Selected_Search__r.State__c), 31, 

IF(CONTAINS(&quot;DC:IN:MD:MS:VA&quot;, Selected_Search__r.State__c), 45, 

IF(CONTAINS(&quot;AL:AR:CO&quot;, Selected_Search__r.State__c), 60,30))))))))</formula>
        <label>Days State Statute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Close__c</fullName>
        <formula>IF(!ISNULL(Date_Moved_In__c),(DATEVALUE(Date_Moved_In__c) -  DATEVALUE(ServiceRequest__r.CreatedDate)) -  ServiceRequest__r.Days_On_Hold__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_To_Move_In__c</fullName>
        <formula>IF(!ISNULL(Move_In_Date__c),Move_In_Date__c - DATEVALUE(ServiceRequest__r.CreatedDate),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Move In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Vacate_Notice__c</fullName>
        <formula>Approved_Through_Date__c  -  Properties_Lookup__r.Days_Notice_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Notice to Vacate Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Responsible_Party_Placement__c</fullName>
        <formula>CASE(Opportunity__r.Deposit_Responsible_Party__c, &apos;Refundable &amp; Non Refundable&apos;, &apos;Refundable &amp; Non Refundable&apos;, &apos;Refundable Only&apos;, &apos;Refundable Only&apos;, &apos;Non Refundable Only&apos;, &apos;Non Refundable Only&apos;, &apos;Will Not Pay&apos;, &apos;Will Not Pay&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Responsible Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispo_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be marked when disposition is completed</description>
        <inlineHelpText>To be marked when disposition is completed</inlineHelpText>
        <label>Dispo Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disposition Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Phone_Number__c</fullName>
        <description>Used a workflow rule to update this field with the correct 800 number for the doucment.</description>
        <label>Document Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Early_Move_out_Date__c</fullName>
        <description>The date populated by Houston at the date billing and payments should stop for the placement.</description>
        <inlineHelpText>The date bililng and payments will end for the placement.</inlineHelpText>
        <label>Early Move-out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Check_Out_Date__c</fullName>
        <defaultValue>TODAY() + 365</defaultValue>
        <label>Estimated Check-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FHA_Billing__c</fullName>
        <description>The FHA amount used for billing in Houston.</description>
        <label>FHA Billing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FHA_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The furniture cost updated by VSS.</description>
        <inlineHelpText>The furniture cost updated by VSS.</inlineHelpText>
        <label>FHA Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Failure_to_Vacate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failure to Vacate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Checkout_Date__c</fullName>
        <description>The day the placement closed. The day the last hotel room was checked out.</description>
        <label>Final Checkout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Furniture_Pick_up_Date__c</fullName>
        <label>Furniture Pick-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSA_Signed__c</fullName>
        <label>THA Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotel_Customer_Care_Specialist_Email__c</fullName>
        <label>Hotel Customer Care Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Housewares_Pickup_Date__c</fullName>
        <label>Housewares Pick-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Coordinator_Email__c</fullName>
        <label>Residence Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Houston_Data_Last_Processed__c</fullName>
        <description>Date Time Houston data was updaetd</description>
        <label>Houston Data Last Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IATA_Closed_Notes__c</fullName>
        <label>IATA Closed Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IATA_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IATA Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATA_Commission_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IATA Commission Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATA_Number_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IATA Number Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Invoice_Sent__c</fullName>
        <formula>Move_In_Date__c  + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Hold_Reason__c</fullName>
        <label>Invoice Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster Preference</fullName>
                </value>
                <value>
                    <fullName>Pending Cost Adjustment</fullName>
                </value>
                <value>
                    <fullName>Potential Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_from_folio__c</fullName>
        <formula>IF(Opportunity__r.Adjuster__r.Invoice_From_Folio__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice from folio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyPlacement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields migrated during Houston -&gt; Mulligan migration</description>
        <label>LegacyPlacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MHS_Booking__c</fullName>
        <description>Was the hotel booked via MHS</description>
        <inlineHelpText>Was the hotel booked via MHS?</inlineHelpText>
        <label>MHS Booking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <description>The CRS profit amount.</description>
        <label>Markup</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Billing__c</fullName>
        <label>Monthly Billing</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Follow_Up_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Follow Up Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <description>Houston populates this based on the quote start date.</description>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_In_Docs_Missing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field gets updated by Mulligan when Move In Docs are uploaded</description>
        <label>Move-In Docs Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Extensions__c</fullName>
        <label>Number of Extensions</label>
        <summaryForeignKey>Extension__c.Placement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Adjuster__c</fullName>
        <formula>Opportunity__r.Adjuster__r.FirstName &amp;&apos; &apos; &amp; Opportunity__r.Adjuster__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjuster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Policyholder__c</fullName>
        <formula>Opportunity__r.Policyholder__r.FirstName &amp; &apos; &apos; &amp;  Opportunity__r.Policyholder__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policyholder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Lookup</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Approved_Through_Date__c</fullName>
        <label>Original ATD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa PayNet</fullName>
                </value>
                <value>
                    <fullName>Chase Visa</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlaceTrak_ID__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlaceTrak ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement_Team__c</fullName>
        <formula>IF(AND ( (LEN(Opportunity__r.Adjuster__c) &lt;&gt; 0), CONTAINS(&quot;Chartis Insurance:Chubb Insurance:PURE:Ace Private Risk Services:Lexington Insurance Company:Nationwide Private Client:AIG Insurance:Fireman&apos;s Fund Insurance Co.&quot;, Opportunity__r.Adjuster__r.Account.Name)), 8, 
IF(LEN(ServiceRequest__r.Damaged_Property_State__c)=0, 0, 
IF(CONTAINS(&quot;CA&quot;, ServiceRequest__r.Damaged_Property_State__c), 1, 
IF(CONTAINS(&quot;AK:HI:ON:QC:NS:NB:PE:NL:AB:BC:MB:SK:AZ:CO:NM:NV:OR:UT:ID:WA&quot;, ServiceRequest__r.Damaged_Property_State__c), 2, 
IF(CONTAINS(&quot;ND:SD:NE:KS:OK:TX:MO:IA:MN:TN:MT:WY&quot;, ServiceRequest__r.Damaged_Property_State__c), 3, 
IF(CONTAINS(&quot;WI:IL:IN:OH:NY&quot;, ServiceRequest__r.Damaged_Property_State__c), 4, 
IF(CONTAINS(&quot;MI:KY:WV:DC:MD:DE:VA&quot;, ServiceRequest__r.Damaged_Property_State__c), 5, 
IF(CONTAINS(&quot;AR:LA:MS:AL:GA:FL:SC:NC&quot;, ServiceRequest__r.Damaged_Property_State__c), 6, 
IF(CONTAINS(&quot;CT:MA:ME:NH:NJ:PA:RI:VT&quot;, ServiceRequest__r.Damaged_Property_State__c), 7,7)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Placement Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Policy_Type__c)</formula>
        <label>Policy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder_Email__c</fullName>
        <label>Policyholder Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Policyholder_First_Name__c</fullName>
        <formula>Opportunity__r.Policyholder__r.FirstName</formula>
        <label>Policyholder First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder_Id__c</fullName>
        <formula>Opportunity__r.Policyholder__r.Id</formula>
        <label>Policyholder Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the policyholder contact.</description>
        <label>Policyholder Lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policyholder_Mobile_Number__c</fullName>
        <formula>Opportunity__r.Policyholder__r.MobilePhone</formula>
        <label>Policyholder Text To Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policyholder_Survey_URL__c</fullName>
        <formula>IF($Organization.Id = &apos;00D0R0000000My4&apos;, &apos;https://www.getfeedback.com/r/5a8MKtl9&apos;, &apos;https://www.getfeedback.com/r/bM19XfyA&apos;)</formula>
        <label>Policyholder Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Properties_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Properties Object</description>
        <inlineHelpText>Lookup to the Properties Object</inlineHelpText>
        <label>Properties_Lookup</label>
        <referenceTo>Properties__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Rent__c</fullName>
        <description>The monthly or daily rent amount for the property.</description>
        <label>Property Rent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate_Adjustment__c</fullName>
        <label>Prorate Adjustment</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate_Total__c</fullName>
        <formula>Prorate__c +  Prorate_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorate Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorate__c</fullName>
        <label>Prorate</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPT_RunRate__c</fullName>
        <description>takes the total amount of time (in months) and times it by the markup (profit) to get the run rate</description>
        <formula>(( Approved_Through_Date__c - Actual_Move_In_Date__c )/30) *  Markup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RunRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RPT_Total_Days__c</fullName>
        <formula>( Approved_Through_Date__c - Move_In_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total_Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPT_Total_Months__c</fullName>
        <formula>(( Approved_Through_Date__c - Actual_Move_In_Date__c )/30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Months</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For_Leaving__c</fullName>
        <label>Reason for Leaving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed Stay</fullName>
                </value>
                <value>
                    <fullName>Hotel Change</fullName>
                </value>
                <value>
                    <fullName>Move to LTH</fullName>
                </value>
                <value>
                    <fullName>Rate Change</fullName>
                </value>
                <value>
                    <fullName>Room Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Manager_Email__c</fullName>
        <label>Relationship Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rent_Hold_Reason__c</fullName>
        <label>Rent Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR Balance – Adjuster</fullName>
                </value>
                <value>
                    <fullName>AR Balance – Policyholder</fullName>
                </value>
                <value>
                    <fullName>Customer Service Issue</fullName>
                </value>
                <value>
                    <fullName>Early Move Out</fullName>
                </value>
                <value>
                    <fullName>LL Foreclosure</fullName>
                </value>
                <value>
                    <fullName>Over ALE</fullName>
                </value>
                <value>
                    <fullName>Pending Cost Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to inform the user that the placement has been placed on Rent Hold</description>
        <label>Rent Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports_Total_MoveIn__c</fullName>
        <formula>IF(ISNULL(Actual_Move_In_Date__c) ,0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports Total MoveIn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reports_Total_MoveOut__c</fullName>
        <formula>IF(ISNULL(Approved_Through_Date__c ) ,0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reports Total MoveOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Deposit_To_Placement__c</fullName>
        <formula>CASE( Opportunity__r.Return_Deposit_To__c, &apos;Policyholder&apos;, &apos;Policyholder&apos;, &apos;Adjuster&apos;, &apos;Adjuster&apos;, &apos;None&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Deposit To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Deposit_To__c</fullName>
        <label>Return Deposit To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
                <value>
                    <fullName>Adjuster</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <description>Security Deposit Data from Houston</description>
        <label>Security Deposit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selected_Search__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Selected Search</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ServiceRequest__c</field>
                <operation>equals</operation>
                <valueField>Searches__c.Service_Request__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Searches__c.Selected__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>